# mta-open

./: .gitignore  .pre-commit-config.yaml  Home.py  README.md  analysis.ipynb  common.py  component.py  gpd.ipynb  home.py  maps.ipynb  metrics.ipynb  persist.ipynb  pyproject.toml  pyproject.toml.backup  requirements.txt  stats.ipynb
.streamlit/: config.toml
data/: borough.parquet  borough__date.parquet  borough__hour.parquet  borough__hour__month.parquet  borough__hour__month__year.parquet  borough__hour__year.parquet  borough__month.parquet  borough__month__year.parquet  borough__year.parquet  borough_hour.parquet  borough_month.parquet  borough_year.parquet  cumulative_borough.parquet  cumulative_year.parquet  date.parquet  heatmap.parquet  hour.parquet  hour__month.parquet  hour__month__year.parquet  hour__year.parquet  invalid_coordinate.parquet  metrics.json  metrics_borough.parquet  metrics_year.parquet  month.parquet  month__year.parquet  nyc.parquet  nyc_projected.parquet  per_unit.parquet  time_only.parquet  year.parquet
data/maps/: bronx.parquet  brooklyn.parquet  manhattan.parquet  queens.parquet  staten_island.parquet
pages/: 100_ℹ️_About_Me.py  1_Data_Exploration.py  1_🌍_Data_Exploration.py  1_📝_Report.py  20_📊_Charts.py  2_Charts_and_Statistics.py  2_📊_Charts.py  2_🔥_Insights.py  2_🩸_Safety_Statistics.py  30_🌍_Maps.py  3_🌍_Maps.py  3_📊_Charts_and_Metrics.py  3_📊_Charts_and_Statistics.py  3_🔥_Heatmaps.py  3_🔥_Maps.py  40_📈_Metrics.py  4_📈_Charts.py  4_📈_Metrics.py  4_📈_Timeseries_Charts.py  5_🔥_Heatmaps.py  Charts_and_Statistics.py  Data_Exploration.py  Timeseries_Charts.py  by_time.py  count_by_time.py  map_by_time.py  maps.py  number_by_time.py
visualization/: components.py  home.py
visualization/pages/: bar_charts.py  by_time.py
workflow/: __init__.py  cleaner.py
workflow/assets/: constants.py  crashes.py  trips.py
