[project]
name = "mta-open"
description = "Data Analytics and Visualization Pipeline on MTA Open Vehicle Crash Dataset"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "dagster-cloud>=1.8.11",
    "dagster-duckdb>=0.24.11",
    "dagster>=1.8.11",
    "duckdb>=1.1.1",
    "geopandas>=1.0.1",
    "hatchling>=1.25.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "plotly>=5.24.1",
    "polars>=1.8.2",
    "prometheus-client>=0.21.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "shapely>=2.0.6",
    "streamlit>=1.39.0",
    "types-requests>=2.32.0.20240914",
]

[tool.hatch.version]
path = "./mta_open/__init__.py"

[project.optional-dependencies]
dev = [
    "coverage>=7.6.2",
    "dagster-webserver>=1.8.11",
    "mypy>=1.11.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
]

[tool.dagster]
module_name = "workflow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
