[tool.poetry]
name = "mta-open"
version = "0.2.4"
description = ""
authors = ["Masum Billal <billalmasum93@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
duckdb = "^1.1.1"
polars = "^1.9.0"
streamlit = "^1.39.0"
dagster = "^1.8.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
