[tool.poetry]
name = "mta-open"
version = "1.1.0"
description = ""
authors = ["Masum Billal <billalmasum93@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
duckdb = "^1.1.1"
polars = "^1.9.0"
streamlit = "^1.39.0"
dagster = "^1.8.11"
plotly = "^5.24.1"
jupyter = "^1.1.1"
pydeck = "^0.9.1"
geopy = "^2.4.1"
scipy = "^1.14.1"
streamlit-folium = "^0.23.1"
pandas-stubs = "^2.2.3.241009"
leafmap = "^0.38.5"

[tool.ruff]
line-length = 120

[[tool.mypy.overrides]]
module = ["geopandas", "plotly.*", "plotly", "pydeck", "folium", "folium.*", "streamlit_folium", "leafmap"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
